--- a/Project/views/register.ejs
+++ b/Project/views/register.ejs
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="/register" method="POST">
+    <form action="/student/register" method="POST">
         <div>
             <label for="firstname">firstName</label>
             <input type="text" id="firstname" name="firstname">
@@ -30,7 +30,7 @@
         </div>
     
     
-        <button type="submit">Register</button>
+        <button onclick="student()" type="submit">Register</button>
     </form>
     
     <a href="/login">Login</a>
